--- a/src/styles/_buble.scss
+++ b/src/styles/_buble.scss
@@ -44,9 +44,10 @@
         position: absolute;
         top: 0;
         left: 0;
-        background-color: $bgc-relax;
-        background-image: url(./img/gift.jpeg);
-        background-position: center center;
+        background-color: $bgc-blue-dark;
+        // background-color: $bgc-relax;
+        // background-image: url(./img/gift.jpeg);
+        // background-position: center center;
         background-size: cover;
         filter: blur(3px);
         width: 100%;
@@ -58,9 +59,10 @@
         position: absolute;
         top: 0;
         right: 0;
-        background-image: url(./img/1fotogenerale.png);
-        background-position: center center;
-        background-size: cover;
+        background-color: $bgc-blue-dark;
+        // background-image: url(./img/1fotogenerale.png);
+        // background-position: center center;
+        // background-size: cover;
         filter: blur(3px);
         width: 100%;
         height: 100%;
