--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -273,6 +273,9 @@ $bgc-arte: #667384;
     font-size: 1em;
     line-height: 2em;
 
+    img {
+        width: 120px;
+    }
     i {
         font-size: 1.2em;
     }
