--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ $bgc-arte: #667384;
 @import './styles/forms';
 @import './styles/buble';
 @import './styles/vivi';
+@import './styles/areapersonale';
 
 @import './styles/navigation';
 
