--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ $bgc-arte: #667384;
 @import './styles/forms';
 @import './styles/buble';
 @import './styles/vivi';
-
+@import './styles/team';
 @import './styles/navigation';
 
 
