--- a/src/styles/_vivi.scss
+++ b/src/styles/_vivi.scss
@@ -1,134 +1,168 @@
-.vivi-page {
-    background-color: $bgc-blue;
-    // background-image: url(./img/1fotogenerale.png);
-    // background-size: cover;
-    // height: 50vh;
-    // min-height: 400px;
-    // background-position: center center;
+.hero-vivi {
+    display: flex;
+    padding: 6em 1em 0;
+    color: $bgc-blue-dark;
 
-    .testo-vivi {
-        padding: 9em 4em;
-        position: relative;
-        color: white;
+    .half-30 {
+        width: 30%;
 
+
+    }
+
+    .half-70 {
+        width: 70%;
+        background-color: $bgc-blue;
+        margin-bottom: 1em;
+        padding: 1em;
     }
 }
 
-.buble-quattro {
-    display: flex;
+span.big-title {
+    font-family: 'Comfortaa', cursive;
+    font-weight: 800;
+    // text-transform: uppercase;
+    font-size: 1.8em;
+}
+.slogan {
+    transform: translate(80px, -20px);
+    padding: 4em 2em;
+    line-height: 2em;
+    font-size: 1.5em;
+    width: 600px;
    
-
-    .card {
-       
-        transform: translateY(-20%);
-        flex-grow: 1;
-        border-radius: 5px;
-        margin: 1em;
-        overflow: hidden;
-        height: 350px;
-
-        svg {
-            background-color: #fff;
-            border-radius: 50%;
-            width: 40%;
-            transform: translate(-15px, -15px);
-
-        }
-
-        h2 {
-            color: white;
-            padding: 2em 1em;
-            text-align: center;
-
-        }
-
-        .content {
-            transform: translateY(-100%);
-            input {
-                
-            }
-        }
-
-
-
-        &.cultura .bg-img {
-            background-color: $bgc-relax;
-            background-image: url(./img/know.jpeg);
-            background-position: center right;
-            background-size: cover;
-            filter: blur(1px);
-            width: 100%;
-            height: 100%;
-        }
-
-        &.relax .bg-img {
-            background-color: $bgc-relax;
-            background-image: url(./img/glass.jpg);
-            background-position: center center;
-            background-size: cover;
-            filter: blur(1px);
-            width: 100%;
-            height: 100%;
-        }
-
-        &.ristorazione .bg-img {
-            background-color: $bgc-relax;
-            background-image: url(./img/group.jpeg);
-            background-position: center center;
-            background-size: cover;
-            filter: blur(1px);
-            width: 100%;
-            height: 100%;
-        }
-
-        &.arte .bg-img {
-            background-color: $bgc-relax;
-            background-image: url(./img/art.jpg);
-            background-position: center center;
-            background-size: cover;
-            filter: blur(1px);
-            width: 100%;
-            height: 100%;
-        }
-    }
 }
 
-.extra {
-    transition: all 1s ease-in-out;
-    background-color: #fff;
 
-    i {
-        margin: .5em 47%;
-        color: color;
-    }
 
-    &:hover {
-        p {
-            visibility: visible;
-            height: 200px;
-            transition: all .5s ease-in-out;
-        }
-        h2 {
-            transform: translateY(-10%);
-        }
-    }
+// .vivi-page {
+//     background-color: $bgc-blue;
+//     // background-image: url(./img/1fotogenerale.png);
+//     // background-size: cover;
+//     // height: 50vh;
+//     // min-height: 400px;
+//     // background-position: center center;
 
-    p {
-        transition: all .5s ease-in-out;
-        height: 0;
-        visibility: hidden;
-        margin: 1em;
-        color: black;
-    }
-}
+//     .testo-vivi {
+//         padding: 9em 4em;
+//         position: relative;
+//         color: white;
 
-section.vivi {
-    display: flex;
-    .card {
-        
-    }
-}
+//     }
+// }
 
-.modal {
-    display: none;
-}
+// .buble-quattro {
+//     display: flex;
+
+//     .card {
+//         transform: translateY(-20%);
+//         flex-grow: 1;
+//         border-radius: 5px;
+//         margin: 1em;
+//         overflow: hidden;
+//         height: 350px;
+
+//         svg {
+//             background-color: #fff;
+//             border-radius: 50%;
+//             width: 40%;
+//             transform: translate(-15px, -15px);
+
+//         }
+
+//         h2 {
+//             color: white;
+//             padding: 2em 1em;
+//             text-align: center;
+
+//         }
+
+//         .content {
+//             transform: translateY(-100%);
+//             input {
+
+//             }
+//         }
+
+
+
+//         &.cultura .bg-img {
+//             background-color: $bgc-relax;
+//             background-image: url(./img/know.jpeg);
+//             background-position: center right;
+//             background-size: cover;
+//             filter: blur(1px);
+//             width: 100%;
+//             height: 100%;
+//         }
+
+//         &.relax .bg-img {
+//             background-color: $bgc-relax;
+//             background-image: url(./img/glass.jpg);
+//             background-position: center center;
+//             background-size: cover;
+//             filter: blur(1px);
+//             width: 100%;
+//             height: 100%;
+//         }
+
+//         &.ristorazione .bg-img {
+//             background-color: $bgc-relax;
+//             background-image: url(./img/group.jpeg);
+//             background-position: center center;
+//             background-size: cover;
+//             filter: blur(1px);
+//             width: 100%;
+//             height: 100%;
+//         }
+
+//         &.arte .bg-img {
+//             background-color: $bgc-relax;
+//             background-image: url(./img/art.jpg);
+//             background-position: center center;
+//             background-size: cover;
+//             filter: blur(1px);
+//             width: 100%;
+//             height: 100%;
+//         }
+//     }
+// }
+
+// .extra {
+//     transition: all 1s ease-in-out;
+//     background-color: #fff;
+
+//     i {
+//         margin: .5em 47%;
+//         color: color;
+//     }
+
+//     &:hover {
+//         p {
+//             visibility: visible;
+//             height: 200px;
+//             transition: all .5s ease-in-out;
+//         }
+//         h2 {
+//             transform: translateY(-10%);
+//         }
+//     }
+
+//     p {
+//         transition: all .5s ease-in-out;
+//         height: 0;
+//         visibility: hidden;
+//         margin: 1em;
+//         color: black;
+//     }
+// }
+
+// section.vivi {
+//     display: flex;
+//     .card {
+
+//     }
+// }
+
+// .modal {
+//     display: none;
+// }
