--- a/src/styles/_vivi.scss
+++ b/src/styles/_vivi.scss
@@ -1,3 +1,5 @@
+
+
 .hero-vivi,
 .custom {
     display: flex;
@@ -43,7 +45,7 @@ span.big-title {
 }
 
 .custom {
-    background-color: $bgc-relax;
+    // background-color: $bgc-relax;
 }
 
 .not-active {
@@ -97,7 +99,8 @@ input[type=checkbox] {
     visibility: hidden;
 }
 
-input[type=checkbox]:checked~div, .selected {
+input[type=checkbox]:checked~div,
+.selected {
     // border: 1px solid black;
     // background-color: red;
     transform: scale(1.1);
@@ -113,19 +116,62 @@ label {
 .libro,
 .musica,
 .poesia {
+    background-color: $bgc-relax;
+    border: 5px solid white;
     margin: 1em;
-    padding: 1em;
-    background-color: #fff;
+    margin-bottom: 10em;
+    padding: 3em 2em;
+    color: white;
+    box-shadow: 0px 7px 20px rgba(0, 0, 0, .2);
+    transition: all.2s ease-in-out;
+    &:hover {
+        transform: scale(1.1);
+        transition: all.2s ease-in-out;
+    }
 }
 
-div[class*='modal'] {
+div[id*='info-select'] {
     display: none;
+    *{
+        box-sizing: border-box ;
+    }
 
     &.active {
-        display: block;
-        width: 90vw;
-        height: 90vh;
+       
+        width: 80%;
+        display: flex;
         background-color: #fff;
+        position: absolute;
+        // padding: 3em 2em;
+        margin: 4em 10%;
+        top: 5em;
+        left: 0;
+        z-index: 4;
+        box-shadow: 0px 7px 20px rgba(0, 0, 0, .2);
+        .img {
+            width: 40%;
+            height: 100%;
+            overflow: hidden;
+            img {
+                height: 100%;
+                transform: scale(1.1)
+            }
+        }
+        .text {
+            width: 60%;
+            height: 100%;
+            padding: 3em 1.5em 1.5em;
+            span {
+                font-weight: 800;
+            }
+        }
+        i {
+            position: absolute;
+            top: 1em;
+            right: 1em;
+            margin: 1em;
+        }
+    
     }
 }
 
