--- a/src/styles/_vivi.scss
+++ b/src/styles/_vivi.scss
@@ -115,7 +115,7 @@ span.big-title {
         padding: 1em;
         background-color: #fff;
         border: 1px solid black;
-
+        
         h2 {
             color: white;
             padding: 2em 1em;
@@ -131,11 +131,11 @@ span.big-title {
     border: 5px solid white;
     margin: 1em;
     margin-bottom: 10em;
-    padding: 3em 2em;
+    padding: 5vw 3vw;
     color: white;
     box-shadow: 0px 7px 20px rgba(0, 0, 0, .2);
     transition: all.2s ease-in-out;
-
+    
     &:hover {
         transform: scale(1.1);
         transition: all.2s ease-in-out;
