--- a/src/pages/Generator.scss
+++ b/src/pages/Generator.scss
@@ -58,14 +58,13 @@ body {
   // height: 100vh;
 
   .gruppo-svg {
-    // height: 50vh;
+    height: 50vh;
     margin: 3em auto 0;
     width: 50vh;
     background-color: #fff;
     border-radius: 50%;
 
     svg {
-      // height: 80vh;
       width: auto;
       visibility: hidden;
 
@@ -85,7 +84,7 @@ body {
     margin-top: 1em;
     width: 90%;
     text-transform: uppercase;
-    background-color:transparent;
+    background-color: transparent;
     color: white
   }
 }
@@ -208,8 +207,88 @@ svg {
   }
 }
 
+.crea {
+  .half-30.primopasso,
+  .half-30.secondopasso,
+  .half-30.terzopasso,
+  .half-30.quartopasso {
+    transform: translate(6vw, -1vw);
+
+    p.come-funziona {
+      text-align: center;
+      padding: 3em 1em;
+      background-color: $bgc-ristorazione;
+      color: white;
+      font-size: 1.3em;
+
+      span {
+        font-weight: 800;
+      }
+    }
+  }
+
+
+  .half-70.secondopasso {
+
+    textarea {
+      padding: 1em;
+      width: 95%;
+      height: 70%;
+      font-size: 1em;
+      // display: block;
+      // position: absolute;
+      // z-index: 2;
+      margin: 2em 1em;
+      background-color: #fff;
+      border: 2px solid $bgc-blue-dark;
+      // border-radius: 0;
+      color: #444;
+      // background-color: transparent;
+      // overflow: auto;
+      resize: none;
+      // transition: transform 1s;
+    }
+
+textarea:focus, button:focus {
+  outline: none;
+}
+
+  }
+
+  .half-70.terzopasso {
+    display: flex;
+    flex-wrap: wrap;
+
+    .scelta {
+      width: 50%;
+
+      input {
+        display: none;
+      }
+
+      label {
+        width: 100%;
+        margin: 5em 1em;
+        padding: 1em;
+        text-align: center;
+        // padding: 2em 1em;
+        color: white;
+        background-color: $bgc-ristorazione;
+      }
+    }
+  }
+
+  .half-70.quartopasso {
+    .riepilogo {
+      img {
+        height: 200px;
+      }
+    }
+  }
+}
+
 .info {
-  background-color: $bgc-blue;
+  background-color: $bgc-blue-dark;
   border-radius: 50%;
   width: 250px;
   height: 250px;
@@ -217,7 +296,8 @@ svg {
   // margin: auto;
   text-align: center;
   padding: 1px;
-  margin: 1em;
+  margin: 1em auto;
+  // transform: translate(100px, 50px)
 
   span {
     font-weight: 700;
@@ -233,15 +313,15 @@ svg {
   }
 }
 
-.genera,
-.scegli,
-.anteprima,
-.spedisci {
-  max-width: 46em;
-  margin: 0 auto;
-  justify-content: space-around;
-  align-items: center;
-}
+// .genera,
+// .scegli,
+// .anteprima,
+// .spedisci {
+//   max-width: 46em;
+//   margin: 0 auto;
+//   justify-content: space-around;
+//   align-items: center;
+// }
 
 .anteprima {
 
@@ -254,14 +334,16 @@ svg {
 
 .messaggio {
   width: 300px;
+
   textarea {
     margin: 2em auto;
     border: 1px solid $bgc-blue;
     padding: 1em;
     font-size: 1em;
   }
+
   &.text-area {
-    
+
     text-align: center;
     padding: 0;
   }
