--- a/src/pages/Generator.scss
+++ b/src/pages/Generator.scss
@@ -218,7 +218,7 @@ svg {
   }
 
 
-  .half-70.secondopasso {
+  .secondopasso {
 
     textarea {
       padding: 1em;
@@ -236,7 +236,8 @@ svg {
       // background-color: transparent;
       // overflow: auto;
       resize: none;
-      // transition: transform 1s;
+      // transition: transform 1s;   
+       margin-top: 19em;
     }
 
 textarea:focus, button:focus {
@@ -245,7 +246,7 @@ textarea:focus, button:focus {
 
   }
 
-  .half-70.terzopasso {
+  .terzopasso {
     display: flex;
     flex-wrap: wrap;
 
@@ -268,10 +269,10 @@ textarea:focus, button:focus {
     }
   }
 
-  .half-70.quartopasso {
+  .quartopasso {
     .riepilogo {
       img {
-        height: 200px;
+        height: 80vh;
       }
     }
   }
@@ -287,7 +288,8 @@ textarea:focus, button:focus {
   text-align: center;
   padding: 1px;
   margin: 1em auto;
-  // transform: translate(100px, 50px)
+  transform: translate(10vw, 50px);
+  position: absolute;
   span:nth-child(1) {
     font-size: 15em;
     position: absolute;
