rimozioni vari file superflui, sistemazione alcune varianti delle pagine, aggiunta logica per visualizzazione esperienze

--- a/src/styles/_buble.scss
+++ b/src/styles/_buble.scss
@@ -24,6 +24,7 @@
         text-align: center;
         color: white;
         width: 100%;
+        margin-bottom: 1em;
 
         h2 {
             padding: 1em;
@@ -33,7 +34,7 @@
             padding: 1em;
         }
 
-        svg {
+        img, svg {
             margin: 1em;
             width: 150px;
             background-color: #fff;
