--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -38,3 +38,26 @@
         margin: 2em;
     }
 }
+.registrati {
+    width: 100%;
+    max-width: 30em;
+    margin: 7em auto;
+    background-color: $bgc-blue;
+    color: white;
+    padding: 1em 2em;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    position: absolute;
+    top: 10%;
+    left: 32%;
+    *{
+        padding: .8em 3em;
+    }
+    input {
+        text-align: center;
+    }
+    button {
+        margin: 2em;
+    }
+}
