--- a/src/styles/_team.scss
+++ b/src/styles/_team.scss
@@ -3,18 +3,13 @@ body{
 }
 h2{
     text-align: center;
-    padding-top: 6em
+    padding-top: 6em;
 }
 .padding{
     padding-top: 6em;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-}
-.padding img{
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
 }
 .larghezza{
     width: 33%;
@@ -23,4 +18,5 @@ h2{
 }
 .larghezza img{
     width: 100%;
+    border-radius: 50%;
 }
